[package]
name = "adif-editor-web"
version = "0.1.0"
authors = ["minhaj"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = [
    "Blob",
    "BlobPropertyBag",
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "Url",
    "Window",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[build]
target = "wasm32-unknown-unknown"
